# game-of-life

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: game_of_life.h  grid.h  inputs.h  menu.h
lib/raylib/lib/: libraylib.5.5.0.dylib
src/: game_of_life.c  grid.c  inputs.c  main.c  menu.c
test/: test_game_of_life.c
